bug: fixed overflow issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,7 +88,7 @@ section {
 }
 
 .two_col{
-    width:100vw;
+    width:100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -113,7 +113,7 @@ section {
 .quotebox{
     background-color:rgba(5, 61, 34, 0.5);
     color: white;
-    width: 60vw;
+    width: 40vw;
     padding: 5px;
     margin: auto;
 }
